--- a/Projects/survey-form/index.html
+++ b/Projects/survey-form/index.html
@@ -10,9 +10,9 @@
 
 <body>
     <header>
-        <h1 id="title">
+        <h4 id="title">
             freeCodeCamp Survey Form
-        </h1>
+        </h4>
         <span>
             Thank you for spending your time to help us to improve our platform
         </span>
@@ -116,10 +116,10 @@
         </div>
         <div class="form-group">
             <p>Any comments or suggestions?</p>
-            <textarea name="comment" id="comment" placeholder="Enter your comment here..."></textarea>
+            <textarea name="comment" id="comment" placeholder="Please Enter your comment here...!"></textarea>
         </div>
         <div class="form-group">
-            <button type="submit">Submit</button>
+            <button type="submit">Save</button>
         </div>
         </div>
     </form>
